[package]
name = "spotifymosaic"
version = "0.2.2"
authors = ["Tomasz Chojnacki <tomaszchojnacki2001@gmail.com>"]
edition = "2021"
description = "A CLI tool for generating Spotify playlist covers using album artworks."
homepage = "https://github.com/tchojnacki/spotifymosaic"
repository = "https://github.com/tchojnacki/spotifymosaic"
license = "MIT"
keywords = ["spotify", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
futures = "0.3.30"
image = "0.24.9"
rand = "0.8.5"
reqwest = "0.11.24"
rspotify = "0.12.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
